# docs/swagger.yaml
@@ -82,7 +82,12 @@ definitions:
     required:
     - name
     type: object
-  response.AccessToken:
+  response.ErrorResponse:
+    properties:
+      message:
+        type: string
+    type: object
+  response.Token:
     properties:
       access_token:
         type: string
@@ -90,10 +95,7 @@ definitions:
         type: string
       id:
         type: integer
-    type: object
-  response.ErrorResponse:
-    properties:
-      message:
+      refresh_token:
         type: string
     type: object
   response.UserResponse:
@@ -125,7 +127,7 @@ info:
     url: http://www.apache.org/licenses/LICENSE-2.0.html
   termsOfService: http://swagger.io/terms/
 paths:
-  /auth/confirm/email:
+  /auth/email/confirm:
     post:
       consumes:
       - application/json
@@ -153,10 +155,10 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/response.ErrorResponse'
-      summary: Email|Phone confirmation
+      summary: Email/Phone confirmation
       tags:
       - auth
-  /auth/confirm/phone:
+  /auth/phone/confirm:
     post:
       consumes:
       - application/json
@@ -184,40 +186,7 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/response.ErrorResponse'
-      summary: Email|Phone confirmation
-      tags:
-      - auth
-  /auth/signin:
-    post:
-      consumes:
-      - application/json
-      parameters:
-      - description: Credential
-        in: body
-        name: input
-        required: true
-        schema:
-          $ref: '#/definitions/request.LoginRequest'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/response.AccessToken'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/response.ErrorResponse'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/response.ErrorResponse'
-        "422":
-          description: Unprocessable Entity
-          schema:
-            $ref: '#/definitions/response.ErrorResponse'
-      summary: Sign In
+      summary: Email/Phone confirmation
       tags:
       - auth
   /auth/signup:
@@ -251,6 +220,67 @@ paths:
           schema:
             $ref: '#/definitions/response.ErrorResponse'
       summary: Sign Up
+      tags:
+      - auth
+  /auth/token:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: Credential
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/request.LoginRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.Token'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+        "422":
+          description: Unprocessable Entity
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+      summary: Token Authentication
+      tags:
+      - auth
+  /auth/token/refresh:
+    get:
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.Token'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Refresh Token
       tags:
       - auth
   /auth/user:
