# internal/http/controller/auth.go
@@ -18,38 +18,6 @@ type AuthController struct {
 	Repo repository.AuthRepository
 }
 
-// @Summary     Sign In
-// @Tags         auth
-// @Accept       json
-// @Produce      json
-// @Param input  body request.LoginRequest true "Credential"
-// @Success      200  {object}  response.AccessToken
-// @Failure      404,422,400  {object}   response.ErrorResponse
-// @Router       /auth/signin [post]
-func (c *AuthController) SignInHandler(ctx *fiber.Ctx) error {
-	body := request.LoginRequest{}
-
-	if err := ctx.BodyParser(&body); err != nil {
-		return response.HttpResponseError(ctx, fiber.StatusBadRequest, err.Error())
-	}
-	if errors := utils.ValidateCredentials(&body); errors != nil {
-		return ctx.Status(fiber.StatusUnprocessableEntity).JSON(errors)
-	}
-	user, err := c.Repo.SignIn(&body)
-	if err != nil {
-		return response.HttpResponseError(ctx, fiber.StatusUnauthorized, "Bad credentials")
-	}
-	token, err := security.CreateAccessToken(user)
-	if err != nil {
-		return response.HttpResponseError(ctx, fiber.StatusUnauthorized, err.Error())
-	}
-	return ctx.JSON(response.AccessToken{
-		ID:          user.ID,
-		Email:       user.Email,
-		AccessToken: token,
-	})
-}
-
 // @Summary     Sign Up
 // @Tags         auth
 // @Accept       json
@@ -83,26 +51,22 @@ func (c *AuthController) SignUpHandler(ctx *fiber.Ctx) error {
 // @Failure      400,401,500  {object}   response.ErrorResponse
 // @Router       /auth/user [get]
 func (c *AuthController) CurrentUserHandler(ctx *fiber.Ctx) error {
-	claims, err := security.ExtractJWT(ctx)
+	user, err := security.GetAuthUser(c.Repo.Query, ctx)
 	if err != nil {
-		return response.HttpResponseError(ctx, fiber.StatusBadRequest, err.Error())
-	}
-	user := security.GetUserFromClaim(*claims)
-	if err = c.Repo.Query.Find(&user).Error; err != nil {
-		return response.HttpResponseError(ctx, fiber.StatusUnauthorized, "Bad credentials")
+		return response.HttpResponseError(ctx, fiber.StatusUnauthorized, err.Error())
 	}
 	return ctx.JSON(response.ParseUserEntity(user))
 }
 
-// @Summary     Email|Phone confirmation
+// @Summary     Email/Phone confirmation
 // @Tags         auth
 // @Accept       json
 // @Produce      json
 // @Param input  body request.EmailConfirmRequest true "Credential"
 // @Success      204
 // @Failure      400,401,500  {object}   response.ErrorResponse
-// @Router       /auth/confirm/email [post]
-// @Router       /auth/confirm/phone [post]
+// @Router       /auth/email/confirm [post]
+// @Router       /auth/phone/confirm [post]
 func (c *AuthController) EmailConfirmationHandler(ctx *fiber.Ctx) error {
 	var req request.EmailConfirmRequest
 	if err := ctx.BodyParser(&req); err != nil {
@@ -129,4 +93,63 @@ func (c *AuthController) EmailConfirmationHandler(ctx *fiber.Ctx) error {
 	}()
 
 	return ctx.Status(fiber.StatusNoContent).JSON(verifyCode)
+}
+
+// @Summary     Token Authentication
+// @Tags         auth
+// @Accept       json
+// @Produce      json
+// @Param input  body request.LoginRequest true "Credential"
+// @Success      200  {object}  response.Token
+// @Failure      404,422,400  {object}   response.ErrorResponse
+// @Router       /auth/token [post]
+func (c *AuthController) TokenAuthenticationHandler(ctx *fiber.Ctx) error {
+	body := request.LoginRequest{}
+
+	if err := ctx.BodyParser(&body); err != nil {
+		return response.HttpResponseError(ctx, fiber.StatusBadRequest, err.Error())
+	}
+	if errors := utils.ValidateCredentials(&body); errors != nil {
+		return ctx.Status(fiber.StatusUnprocessableEntity).JSON(errors)
+	}
+	user, err := c.Repo.SignIn(&body)
+	if err != nil {
+		return response.HttpResponseError(ctx, fiber.StatusUnauthorized, "Bad credentials")
+	}
+	token, err := security.CreateAccessToken(user)
+	if err != nil {
+		return response.HttpResponseError(ctx, fiber.StatusUnauthorized, err.Error())
+	}
+	return ctx.JSON(response.Token{
+		ID:           user.ID,
+		Email:        user.Email,
+		AccessToken:  token,
+		RefreshToken: token,
+	})
+}
+
+// @Summary     Refresh Token
+// @Security  ApiKeyAuth
+// @Tags         auth
+// @Accept       json
+// @Produce      json
+// @Success      200  {object}  response.Token
+// @Failure      400,401,500  {object}   response.ErrorResponse
+// @Router       /auth/token/refresh [get]
+func (c *AuthController) RefreshTokenHandler(ctx *fiber.Ctx) error {
+	user, err := security.GetAuthUser(c.Repo.Query, ctx)
+	if err != nil {
+		return response.HttpResponseError(ctx, fiber.StatusUnauthorized, err.Error())
+	}
+	currentToken, err := security.DecodeJWT(ctx.Get("Authorization"))
+	if err != nil {
+		return response.HttpResponseError(ctx, fiber.StatusUnauthorized, err.Error())
+	}
+	newToken, err := security.RefreshAccessToken(user, currentToken)
+	return ctx.JSON(response.Token{
+		ID:           user.ID,
+		Email:        user.Email,
+		AccessToken:  currentToken,
+		RefreshToken: newToken,
+	})
 }
