# internal/routes/api.go
@@ -14,14 +14,12 @@ import (
 )
 
 func SetupAPIRoutes(app *fiber.App, db *gorm.DB) {
-
 	api := app.Group("/api")
 	if os.Getenv("APP_ENV") != "production" {
 		SwaggerRoutes(app)
 	}
 	AuthControllerRoutes(api, db)
 	UserControllerRoutes(api, db)
-	TestControllerRoutes(api, db)
 }
 
 func UserControllerRoutes(app fiber.Router, db *gorm.DB) {
@@ -37,18 +35,12 @@ func UserControllerRoutes(app fiber.Router, db *gorm.DB) {
 func AuthControllerRoutes(app fiber.Router, db *gorm.DB) {
 	authCtr := &controller.AuthController{Repo: repository.AuthRepository{Query: db}}
 	authRoute := app.Group("/auth")
-	authRoute.Post("/signin", authCtr.SignInHandler)
 	authRoute.Post("/signup", authCtr.SignUpHandler)
-	authRoute.Post("/confirm/email", authCtr.EmailConfirmationHandler)
-	authRoute.Post("/confirm/phone", authCtr.EmailConfirmationHandler)
+	authRoute.Post("/token", authCtr.TokenAuthenticationHandler)
+	authRoute.Get("/token/refresh", middleware.BearerAuthMiddleware(), authCtr.RefreshTokenHandler)
+	authRoute.Post("/email/confirm", authCtr.EmailConfirmationHandler)
+	authRoute.Post("/phone/confirm", authCtr.EmailConfirmationHandler)
 	authRoute.Get("/user", middleware.BearerAuthMiddleware(), authCtr.CurrentUserHandler)
-}
-
-func TestControllerRoutes(app fiber.Router, db *gorm.DB) {
-	testCtr := &controller.TestController{}
-	tRoute := app.Group("/tests")
-	tRoute.Post("/email", testCtr.TestMailHandler)
-	tRoute.Post("/email/push", testCtr.TestPushNotificationHandler)
 }
 
 func SwaggerRoutes(app *fiber.App) {
